--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,35 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.swipeh1.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    tools:context="com.example.android.swipeh1.MainActivity"
+    android:layout_margin="50dp">
+
+
+    <TextView
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="Swipe to Win"
+        android:textColor="@color/colorAccent"
+        android:textSize="50dp" />
 
     <EditText
         android:id="@+id/timeLimit"
         android:layout_width="244dp"
         android:layout_height="61dp"
-        android:layout_marginStart="68dp"
         android:hint="Please time limit in seconds"
         android:inputType="number"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="118dp"
         tools:ignore="MissingConstraints"
-        android:layout_marginLeft="68dp" />
-
-
+        tools:layout_editor_absoluteY="118dp"
+        android:layout_gravity="center"/>
 
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start"
+        android:layout_marginTop="50dp"
         android:onClick="StartButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Start"
+        android:layout_gravity="center"/>
 
 
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
