--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,28 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     tools:context="com.example.android.swipeh1.Main2Activity">
 
-
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#E79C20"
-        android:id="@+id/myView"/>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <TextView
+        android:layout_weight="1"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="sans-serif-light"
+        android:gravity="center"
+        android:text="Score"
+        android:textSize="36sp" />
+
+    <TextView
+        android:layout_weight="1"
         android:id="@+id/score"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="53dp"
         android:layout_marginBottom="24dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="0"
-        android:textSize="56sp" />
+        android:textSize="36sp" />
+</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="0dp"
+            android:layout_height="53dp"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="TimeLeft"
+            android:textSize="36sp" />
+
+    <TextView
+        android:layout_weight="1"
+        android:id="@+id/timeDisplay"
+        android:layout_width="0dp"
+        android:layout_height="64dp"
+        android:ems="10"
+        android:inputType="none"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="36sp" />
+
+    </LinearLayout>
+    <TextView
+        android:id="@+id/myView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="50dp"
+        android:background="#E79C20"
+        android:gravity="center"
+        android:text="Swipe Inside the Orange box"
+        android:textAlignment="center"
+        android:textColor="@android:color/black" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
