--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -60,6 +60,20 @@
         android:textColor="@android:color/holo_blue_light"
         android:textSize="36sp" />
 
+
+        <TextView
+            android:layout_weight="1"
+            android:id="@+id/time"
+            android:layout_width="0dp"
+            android:layout_height="64dp"
+            android:ems="10"
+            android:inputType="none"
+            android:text="0"
+            android:textAlignment="center"
+            android:textColor="@android:color/holo_blue_light"
+            android:textSize="36sp" />
+
+
     </LinearLayout>
     <TextView
         android:id="@+id/myView"
