--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    tools:context="com.example.android.swipeh1.Main2Activity">
+    tools:context="com.example.android.swipeh1.Main2Activity"
+    android:id="@+id/fullscreen">
 
 <LinearLayout
     android:layout_width="match_parent"
